tests/pass/0041_duplicate_names_in_nested_scopes_allowed.ee
fn main() {
    let x = 1;
    {
        let x = 2;
        debugPrint(x);
    }
    debugPrint(x);
}
