tests/fail/0016_comment_before_duplicate_declaration.ee
fn main() {
    let x = 1;
    // Duplicate declaration should still fail with comments present
    let x = 2;
}
